--- a/.github/workflows/QCA-ALL.yml
+++ b/.github/workflows/QCA-ALL.yml
@@ -41,7 +41,7 @@ jobs:
       #编译平台
       WRT_TARGET: ${{matrix.TARGET}}
       #默认主题
-      WRT_THEME: argon
+      WRT_THEME: kucat
       #默认主机名
       WRT_NAME: OWRT
       #默认WIFI名
